--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -72,8 +72,8 @@ html,body{
 
 
 .icondialog{
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   border: 1px double #b6b6b6;
 }
 
@@ -149,4 +149,9 @@ font-size: 40px;
 
 .theme--light.v-text-field--outline>.v-input__control>.v-input__slot {
   border: 2px outset rgba(138, 132, 132, 0.54);
+}
+
+
+.v-menu__content {
+  position: fixed !important;
 }
