--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -21,6 +21,19 @@ html,body{
   bottom: 0;  
   cursor: pointer;
 }
+
+.containersModal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;  
+  cursor: pointer;
+  z-index: 10000000000;
+  background-color: #00000078!important;
+}
 .centering {
   float:none;
   margin:0 auto;
@@ -77,6 +90,14 @@ html,body{
   border: 1px double #b6b6b6;
 }
 
+.iconinfo{
+  width: 150px;
+  height: 150px;
+  border: 1px double #b6b6b6;
+}
+
+
+
 
 
 
@@ -131,10 +152,7 @@ font-size: 40px;
 
 /* MODIFICACION DE STYLES VUETIFY
 */
-.theme--dark.v-toolbar {
-  background-color: #1e88e5 !important;
-  color: #fff !important;
-}
+
 
 .theme--light.v-table thead th {
   color: rgba(53, 53, 53, 0.87);
@@ -163,6 +181,8 @@ font-size: 40px;
 
 .v-menu__content {
   position: fixed !important;
+  top: 700.5px !important;
+  left: 1550px !important;
 }
 
 .miw-3{
@@ -217,3 +237,12 @@ font-size: 40px;
   visibility: visible;
   opacity: 1;
 }
+
+.v-card>:last-child:not(.v-btn):not(.v-chip) {
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
+  background: whitesmoke;
+}
+
+
+
