--- a/src/assets/css/media_query.css
+++ b/src/assets/css/media_query.css
@@ -64,16 +64,14 @@
   @media (min-width: 768px){
     .miw-3{
       min-width: 100px;
-      max-width:100px;
-      
+      max-width:100px;      
     }
   }
 
   @media (min-width: 992px){
     .miw-3{
       min-width: 280px;
-      max-width:200px;
-      
+      max-width:200px;      
     }
   }
 
@@ -83,7 +81,9 @@
     @media (min-width: 1200px){
     .miw-3{
       min-width: 430px;
-      max-width: 400px;
-      
+      max-width: 400px;      
+    }
+    .f6{
+      font-size: 20px;
     }
   }
