--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -243,3 +243,31 @@ font-size: 40px;
 
 
 
+
+
+[data-title]:hover::before {
+  content: attr(data-title);
+  position: absolute;
+  left:-35px;
+  bottom: 60px;
+  display: inline-block;
+  padding: 3px 6px;
+  border-radius: 2px;
+  background: #000;
+  color: #fff;
+  font-size: 12px;
+  font-family: sans-serif;
+  white-space: nowrap;
+
+}
+[data-title]:hover::after {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: 8px;
+  display: inline-block;
+  color: #fff;
+  border: 8px solid transparent;	
+  border-bottom: 8px solid #000;
+  background-attachment: pink;
+}
