--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -149,7 +149,10 @@ font-size: 40px;
 
 }
 
-
+.font-size-17{
+  font-size: 17px !important;
+  font-weight: 300;
+}
 
 /* MODIFICACION DE STYLES VUETIFY
 */
@@ -161,6 +164,13 @@ font-size: 40px;
   font-size: 16px;
 }
 
+
+.theme--dark.v-table thead th {
+   color: rgba(255, 255, 255, 0.945);  
+   background: rgb(77, 77, 77) !important;
+  font-weight: bold;
+  font-size: 16px;
+}
 
 .v-text-field.v-text-field--enclosed .v-text-field__details {
   margin-bottom: -22px;
