--- a/src/assets/css/media_query.css
+++ b/src/assets/css/media_query.css
@@ -42,6 +42,14 @@
     .mobile .theme--light.v-table tbody tr:hover:not(.v-datatable__expand-row) {
       background: transparent;
     }
+    .possition3 {
+
+      position: fixed;
+      top: 250px;
+      bottom: 0;
+      left: 50px;
+  
+    }
 
   }
   .flex-content {
@@ -86,4 +94,15 @@
     .f6{
       font-size: 20px;
     }
+    .possition3 {
+
+      position: fixed;
+      top: 250px;
+      bottom: 0;
+      left: 700px;
+  
+    }
+
+    
+
   }
